--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -159,8 +159,8 @@ stages:
                 steps:
                   - checkout: self
 
-                  - task: AzurePowerShell@5
-                    displayName: Enable Access
+                  - task: AzureCLI@2
+                    displayName: 'Empty Storage Container Contents & upload Content'
                     inputs:
                       ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
                         azureSubscription: $(devServiceConnection)
@@ -168,12 +168,13 @@ stages:
                         azureSubscription: $(prodServiceConnection)
                       ${{ else }}:
                         azureSubscription: $(testServiceConnection)
-                      ScriptType: 'InlineScript'
-                      azurePowerShellVersion: 'LatestVersion'
-                      Inline: |
+                      scriptType: pscore
+                      scriptLocation: inlineScript
+                      inlineScript: |
                         $publicIp = Invoke-RestMethod -uri https://api.ipify.org
                         Write-Host "Public Ip : $publicIp "
-                        Add-AzStorageAccountNetworkRule -ResourceGroupName $(ShdResourceGroupName) -AccountName $(storageAccountName) -IPAddressOrRange "$publicIp"
+                        #Add-AzStorageAccountNetworkRule -ResourceGroupName $(ShdResourceGroupName) -AccountName $(storageAccountName) -IPAddressOrRange "$publicIp"
+                        az storage account network-rule add --ip-address $publicIp --resource-group $(ShdResourceGroupName) --account-name $(storageAccountName)
                         Write-Host "##vso[task.setvariable variable=agentIp]$publicIp"
 
                   - task: AzureCLI@2
@@ -192,7 +193,7 @@ stages:
 
                         $FWTestAttempt = 1
                         $FWTestMax = 25
-
+                        Start-Sleep -Seconds 35
                         do {
                             try {
                                 az storage blob delete-batch --account-name $(storageAccountName) --source $(UIContainerName) --only-show-errors --auth-mode=login
@@ -239,6 +240,7 @@ stages:
                             $newCdnAssetsVersion = $cdnAssetsVersion+0.1
                             az keyvault secret set --name cdnAssetsVersion --vault-name $(keyVaultName) --value $newCdnAssetsVersion
                             az keyvault network-rule remove --name $(keyVaultName) --resource-group $(ShdResourceGroupName) --ip-address $IpAddress -o none
+                            az storage account network-rule remove --ip-address $IpAddress  --resource-group $(ShdResourceGroupName) --account-name $(storageAccountName)
                           }
                         }
       - ${{ if and(eq(var.key, 'pr'),eq(parameters.location, 'westeurope')) }}:
