--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,22 @@
+# This file is for unifying the coding style for different editors and IDEs
 # editorconfig.org
 root = true
 
 [*]
-indent_style = space
-indent_size = 2
 end_of_line = lf
 charset = utf-8
-trim_trailing_whitespace = true
-insert_final_newline = true
-
-[*.md]
 trim_trailing_whitespace = false
+insert_final_newline = true
+indent_style = space
+
+[{*.yml,*.json}]
+trim_trailing_whitespace = true
+indent_size = 2
+
+[{*.js,*.ts}]
+trim_trailing_whitespace = true
+indent_size = 2
+
+[{*.css,*.scss}]
+trim_trailing_whitespace = true
+indent_size = 2
