Crets missing for git access

--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -155,6 +155,7 @@ stages:
               deploy:
                 steps:
                   - checkout: self
+                    persistCredentials: true
 
                   - task: AzureCLI@2
                     displayName: 'Enable Access to Storage Account'
