--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -140,9 +140,9 @@ stages:
           value: $(SubShortName)-signin-kv
         displayName: "Deployment [${{var.Key}}] ${{parameters.location}}"
         ${{ if parameters.shaUse }}:
-          ${{ if or(eq(parameter.key, 'dev'), eq(parameter.key, 'tran')) }}:
+          ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
             pool: Self-hosted Dev
-          ${{ elseif eq(parameter.key, 'pr') }}:
+          ${{ elseif eq(var.key, 'pr') }}:
             pool: Self-hosted Prod
           ${{ else }}:
             pool: Self-hosted Test
