--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -97,6 +97,7 @@ stages:
   - template:  pipeline/scanTools.yml@devopsTemplates
     parameters:
       npmInstCmd: 'install --force --json --no-package-lock'
+      AppDeploy: true
 
 - ${{ each var in variables }}:
   - ${{ if in(var.key, 'tran','dev','test','pp','pr') }}:
